ci: Add step to clean old Allure results before test run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Clean old Allure results
+        run: rm -rf allure-results
+
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
