--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,15 +16,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Clean old Allure results
-        run: rm -rf allure-results
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run Cypress tests
-        uses: cypress-io/github-action@v6
-        with:
-          browser: chrome
-          headless: true
-        continue-on-error: true
+        run: npx cypress run --env allure=true
+        continue-on-error: true 
 
       - name: Setup Java
         uses: actions/setup-java@v4
