--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,30 +13,38 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      # 1. Checkout โค้ด
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2. ติดตั้ง Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
+      # 3. ติดตั้ง Dependencies (ใช้ npm ci ซึ่งเร็วกว่าสำหรับ CI)
       - name: Install dependencies
         run: npm ci
 
+      # 4. รัน Cypress tests โดยตรง และเปิดใช้งาน Allure
+      # วิธีนี้รับประกันว่า allure-results จะถูกสร้างจากเทสล่าสุดเสมอ
       - name: Run Cypress tests
         run: npx cypress run --env allure=true
-        continue-on-error: true 
+        continue-on-error: true # ทำงานต่อแม้เทสจะล้มเหลว เพื่อให้ยังสร้าง Report ได้
 
+      # 5. ติดตั้ง Java (จำเป็นสำหรับ Allure)
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
+      # 6. สร้าง Allure Report
       - name: Generate Allure Report
         run: npx allure generate allure-results --clean -o allure-report
         
+      # 7. Deploy โฟลเดอร์ allure-report ไปยัง branch gh-pages
       - name: Deploy Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
